--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Cawww!
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Kenku</title>
+</head><body>
+<p>The Kenku are a mythical avian race that got hit cursed to have no original thoughts and only can repeat snippets of what
+they've heard before (with dictaphonic memory though)</p>
+  
+<p>The analogy to large language models  “just regurgitating training data” is obvious.</p>
+
+<img src="kenku3.jpg" alt="Fake photograph of an anthropomorphic bird playing recordings from a retro dictaphone" />
+
+<p>I occasionally post <b>unoriginal ancient wisdom</b> on on <a href="https://x.com/Kenku_Allaryi">Twitter</a>. The “Kenku” accounts on LessWrong and Cyborgism Wiki are also mine.</p>
+
+  </body></html>
